# CompilerV2

./: .gitignore  CMakeLists.txt  Makefile  a.out  config.sh  gdb.exe.stackdump  out.ll  trieinput.trie
examples/: input.dsl  test.dsl
include/: CodeGen.hpp  Errors.hpp  Log.hpp  ModuleUnit.hpp  Parser.hpp  Token.hpp  Tokenizer.hpp  Trie.hpp
src/: Codegen.cpp  Colors.cpp  Colors.hpp  Log.cpp  Log.hpp  ModuleUnit.cpp  Parser.cpp  Parser.hpp  Token.hpp  Tokenizer.cpp  Tokenizer.hpp  Trie.cpp  TrieGenerator.c  TrieStructure.inc  main.cpp  test.cpp
